Fix: Style: Created global CSS custom class to reset letter spacing.
The reason is that there's no quasar class to disable letter spacing.

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,4 +1,7 @@
-// app global css in SCSS form
+/*  Global  */
+.letter-spacing-none {
+  letter-spacing: 0;
+}
 
 /*  Drawer nav  */
 .q-drawer {
